# MTH

./: .gitignore  .gitmodules  README.md
Kintinuous/src/: MainController.cpp  MainController.h  PangoVis.cpp
Kintinuous/src/backend/: TrackerInterface.cpp  TrackerInterface.h
Kintinuous/src/frontend/: KintinuousTracker.cpp  KintinuousTracker.h
Kintinuous/src/utils/: ConfigArgs.h  RawLogReader.cpp  RawLogReader.h
adapt/: divide_associations.py  gftt_test.py  histogram_values.py  rtabmap_associate.py
adapt/KITTI/groundtruth_kitti_to_freiburg/: CMakeLists.txt  main.cpp
adapt/KITTI/kitti_to_png/: CMakeLists.txt  main.cpp
adapt/KITTY/groundtruth_kitty_to_freiburg/: CMakeLists.txt  main.cpp  worker.sh
adapt/KITTY/kitty_to_png/: CMakeLists.txt  main.cpp
adapt/LogView/src/: LogView.cpp  RawLogReader.cpp
adapt/beamagine_to_png/: CMakeLists.txt  main.cpp
adapt/flip-icl/: utils.cpp  utils.h
adapt/flip-imgs/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
adapt/png_to_klg/: CMakeLists.txt  main.cpp  worker.sh
adapt/text_intensity_beam/: CMakeLists.txt  main.cpp
adapt/three_channels/: CMakeLists.txt  main.cpp
adaptations/: README.md
doitforme/: ate_kintinuous_kitty_worker.sh  ate_kintinuous_tum_worker.sh  ate_kitty_worker.sh  ate_rtabmap_kitty_worker.sh  ate_rtabmap_tum_worker.sh  ate_tum_worker.sh  flip_icl_worker.sh  geodesic_interpolation_kitti_worker.sh  gt_worker.sh  kintinuous_icl_map_worker.sh  kintinuous_kitty_map_worker.sh  kintinuous_kitty_worker.sh  kintinuous_tum_worker.sh  kitty_to_png_worker.sh  png_to_klg_icl_worker.sh  png_to_klg_worker.sh  png_to_sync_icl_worker.sh  rtabmap_icl_map_worker.sh  rtabmap_kitty_infrared_worker.sh  rtabmap_kitty_map_worker.sh  rtabmap_kitty_scaled_infrared_worker.sh  rtabmap_kitty_scaled_worker (original).sh  rtabmap_kitty_scaled_worker.sh  rtabmap_kitty_worker (original).sh  rtabmap_kitty_worker.sh  rtabmap_tum_worker(original).sh  rtabmap_tum_worker.sh  surfreg_icl_rtabmap_kintinuous.sh
export_rtab-map/: main.cpp
install/: build_efusion_core.sh  execute_adapt_kitty_to_png.sh  execute_rtabmap_rgbd-dataset.sh  install_elastic_fusion.sh  install_kintinuous.sh  install_ros_rtabmap.sh  modules_adapt_beamagine_to_png.sh  modules_adapt_kitty_to_png.sh  modules_cartographer_ros.sh  modules_elastic_fusion.sh  modules_icl.sh  modules_kintinuous.sh  modules_rtabmap.sh  modules_tool_png_to_klg.sh
metrics_eval/: evaluate_ate.py  evaluate_rpe.py
metrics_eval/SurfReg/src/: SurfReg.cpp
rgbd-dataset_rtab-map/: main.cpp
rtab-map/: CMakeLists.txt  main.cpp
rtabmap/: CMakeLists.txt
rtabmap/corelib/include/rtabmap/core/: Version.h
rtabmap/corelib/src/: CameraRGB.cpp  CameraRGBD.cpp  Features2d.cpp  Registration.cpp  RegistrationVis.cpp
rtabmap/corelib/src/resources/: DatabaseSchema.sql
rtabmap/export_rtab-map/: CMakeLists.txt  main.cpp
rtabmap/rgbd-dataset_rtab-map/: CMakeLists.txt  main.cpp
rtabmap/rtabmap/: RTABMapConfig.cmake.in
rtabmap/rtabmap-release/corelib/src/: CameraModel.cpp  CameraRGB.cpp  CameraRGBD.cpp
rtabmap/rtabmap/corelib/src/: CameraRGB.cpp
